--- a/sos-providers/dbp/dbp-prv/pom.xml
+++ b/sos-providers/dbp/dbp-prv/pom.xml
@@ -49,7 +49,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <groups>sorcer.util.junit.SorcerClient</groups>
+                            <groups>sorcer.junit.SorcerClient</groups>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -70,7 +70,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <excludedGroups>sorcer.util.junit.SorcerClient</excludedGroups>
+                            <excludedGroups>sorcer.junit.SorcerClient</excludedGroups>
                         </configuration>
                     </plugin>
                 </plugins>
