--- a/examples/ex1/ex1-cfg2/src/main/resources/whoIsIt2-prv.config
+++ b/examples/ex1/ex1-cfg2/src/main/resources/whoIsIt2-prv.config
@@ -18,8 +18,9 @@ sorcer.core.provider.ServiceProvider {
 			new Comment("Returns provider's host name and address"), 
 			new Location("", "", "Sorcersoft.com") };
 		
-		// PULL execution related
 		publishedInterfaces = new Class[] { sorcer.ex1.WhoIsIt.class };
+		beanClasses = new Class[] { sorcer.ex1.bean.WhoIsItBean2.class };
+		// PULL execution related
 		spaceEnabled = true;
 		interfaceOnly = false;	
 		workersTransactional = false;	
