migrate ex2 requestors to junit tests

--- a/examples/ex2/ex2-req/pom.xml
+++ b/examples/ex2/ex2-req/pom.xml
@@ -32,6 +32,13 @@
             <artifactId>commons-req</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-junit</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
