--- a/examples/ex4/ex4-req/pom.xml
+++ b/examples/ex4/ex4-req/pom.xml
@@ -32,5 +32,12 @@
             <artifactId>commons-req</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-junit</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
