--- a/sos/commons-req/pom.xml
+++ b/sos/commons-req/pom.xml
@@ -31,5 +31,12 @@
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
 		</dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jul-to-slf4j</artifactId>
+            <version>${v.slf4j}</version>
+            <optional>true</optional>
+        </dependency>
 	</dependencies>
 </project>
