add versions of all artifacts required by launcher to versions.properties and remove them from Launcher code

--- a/distribution/src/main/configs/versions.properties
+++ b/distribution/src/main/configs/versions.properties
@@ -8,3 +8,6 @@ v.plexus=${v.plexus}
 v.slf4j=${v.slf4j}
 v.sigar=${v.sigar}
 v.logback=${v.logback}
+v.guava=${v.guava}
+v.clang=${v.clang}
+v.ccli=${v.ccli}
