--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
 
 	<properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <surefire.includedGroups/>
+        <surefire.excludedGroups>sorcer.junit.SorcerClient</surefire.excludedGroups>
 
 		<v.sorcer>${project.version}</v.sorcer>
         <!-- required for site -->
@@ -44,8 +46,9 @@
         <v.junit>4.11</v.junit>
         <v.logback>1.0.13</v.logback>
         <v.plexus>3.0.15</v.plexus>
-        <surefire.includedGroups/>
-        <surefire.excludedGroups>sorcer.junit.SorcerClient</surefire.excludedGroups>
+        <v.guava>15.0</v.guava>
+        <v.clang>3.2.1</v.clang>
+        <v.ccli>1.2</v.ccli>
     </properties>
 
 	<modules>
@@ -217,6 +220,11 @@
                 <version>2.4</version>
             </dependency>
             <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${v.clang}</version>
+            </dependency>
+            <dependency>
                 <groupId>com.sleepycat</groupId>
                 <artifactId>je</artifactId>
                 <version>${v.sleepycat}</version>
@@ -224,7 +232,7 @@
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
-                <version>15.0</version>
+                <version>${v.guava}</version>
             </dependency>
 		</dependencies>
 	</dependencyManagement>
