--- a/sos/sos-launch/sos-start/pom.xml
+++ b/sos/sos-launch/sos-start/pom.xml
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
-            <version>1.2</version>
+            <version>${v.ccli}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
