--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,23 @@
 language: java
 before_install:
-  - unset SORCER_HOME
   - export SORCER_HOME=`pwd`
-  - unset RIO_HOME
   - export RIO_HOME=$SORCER_HOME/target/rio
   - echo "SORCER_HOME is $SORCER_HOME"
   - echo "RIO_HOME is $RIO_HOME"
 install: mvn -q -P disttest install
-before_script:
-#  - cp -f $SORCER_HOME/configs/template/sorcer.env_int-tests $SORCER_HOME/configs/sorcer.env
-#  - export JAVA_OPTS=-Djava.net.preferIPv6Stack=true
+script:
+  - bin/sorcer-boot -Psorcer
+  - mvn test -Prun-its
+  - kill `jps|grep Sorcer|cut -d' ' -f1`
   - cd distribution/target/sorcer-*/sorcer-*/
   - export SORCER_HOME=`pwd`
   - unset RIO_HOME
-#  - export RIO_HOME=$SORCER_HOME/lib/rio
-  - $SORCER_HOME/bin/sorcer-boot &
-  - sleep 12
-#temporally disable integration tests. Enable them after all of them has been migrated to sorcer-maven-plugin
-#for now run locally:
-#mvn verify -Dmaven.test.skip=false -Prun-its -pl :first-prv,:ju-arithmetic-prv
-#script: cd $SORCER_HOME/tests/ && mvn -Dmaven.test.skip=false -Prun-its test
-script: cd $SORCER_HOME/../../../../tests/ && mvn -Dmaven.test.skip=false test
+  - export -n RIO_HOME
+  - cd -
+  - bin/test-examples.sh
+after_script:
+  - kill `jps|grep Sorcer|cut -d' ' -f1`
 jdk:
-#  - openjdk6
-#  - openjdk7
   - oraclejdk7
 # whitelist
 branches:
