--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - echo "RIO_HOME is $RIO_HOME"
 install: mvn -P disttest install
 script:
-  - bin/sorcer-boot -Psorcer
+  - bin/sorcer-boot -Psorcer -wstart -Mforce-fork
   - mvn test -Prun-its
   - kill `jps|grep Sorcer|cut -d' ' -f1`
   - cd distribution/target/sorcer-*/sorcer-*/
