[pom] clean dependencies remove some unused java imports

--- a/examples/ex2/ex2-rdl/pom.xml
+++ b/examples/ex2/ex2-rdl/pom.xml
@@ -19,7 +19,7 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sos-platform</artifactId>
+            <artifactId>sorcer-api</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
