--- a/sos/sos-launch/sorcer-launcher-base/pom.xml
+++ b/sos/sos-launch/sorcer-launcher-base/pom.xml
@@ -43,7 +43,10 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${v.slf4j}</version>
+        </dependency>
     </dependencies>
-
-
 </project>
