--- a/examples/ex0/ex0-api/pom.xml
+++ b/examples/ex0/ex0-api/pom.xml
@@ -13,7 +13,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
-			<artifactId>sos-platform</artifactId>
+			<artifactId>sorcer-api</artifactId>
             <version>${project.version}</version>
 		</dependency>
 	</dependencies>
