--- a/examples/ex2/ex2-prv/pom.xml
+++ b/examples/ex2/ex2-prv/pom.xml
@@ -19,12 +19,6 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sos-boot</artifactId>
-            <version>${project.version}</version>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>ex2-api</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -34,22 +28,6 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.river</groupId>
-            <artifactId>start</artifactId>
-            <version>${v.jini}</version>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>net.jini</groupId>
-            <artifactId>jsk-lib</artifactId>
-            <version>${v.jini}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.rioproject</groupId>
-            <artifactId>rio-platform</artifactId>
-            <version>${v.rio}</version>
-        </dependency>
-        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
@@ -57,20 +35,10 @@
             <groupId>gsbase</groupId>
             <artifactId>gsbase</artifactId>
         </dependency>
+
         <dependency>
-            <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy-all</artifactId>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-junit</artifactId>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <!--disable categories -->
-                <configuration combine.self="override"/>
-            </plugin>
-        </plugins>
-    </build>
 </project>
