--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
@@ -13,7 +14,7 @@
 	<packaging>pom</packaging>
 	<name>SORCER examples</name>
 
-	<modules>
+    <modules>
         <module>ex0</module>
 		<module>ex1</module>
 		<module>ex2</module>
@@ -33,6 +34,13 @@
                         <groups>${surefire.includedGroups}</groups>
                         <excludedGroups>${surefire.excludedGroups}</excludedGroups>
                     </configuration>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.sorcersoft.sorcer</groupId>
+                            <artifactId>sorcer-junit</artifactId>
+                            <version>${project.version}</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
             </plugins>
         </pluginManagement>
