--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,12 @@
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
+                <groupId>org.sorcersoft.sorcer</groupId>
+                <artifactId>sorcer-junit</artifactId>
+                <version>${project.version}</version>
+                <scope>test</scope>
+            </dependency>
+			<dependency>
 				<groupId>org.rioproject</groupId>
 				<artifactId>rio-platform</artifactId>
 				<version>${v.rio}</version>
