--- a/sos-providers/dbp/dbp-api/pom.xml
+++ b/sos-providers/dbp/dbp-api/pom.xml
@@ -19,6 +19,10 @@
             <artifactId>sorcer-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>net.jini</groupId>
+            <artifactId>jsk-platform</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
