--- a/sos/sorcer-api/src/main/resources/META-INF/maven/groupversions.properties
+++ b/sos/sorcer-api/src/main/resources/META-INF/maven/groupversions.properties
@@ -11,3 +11,10 @@ org.rioproject.resolver = ${v.rio}
 com.sleepycat = ${v.sleepycat}
 org.codehaus.groovy = ${v.groovy}
 org.sorcersoft.sorcer = ${v.sorcer}
+org.apache.commons_commons-lang3 = ${v.clang}
+com.google.guava=${v.guava}
+commons-io=${v.cio}
+commons-cli=${v.ccli}
+org.codehaus.plexus=${v.plexus}
+org.slf4j=${v.slf4j}
+ch.qos.logback=${v.logback}
