upgrade river: remove jmx-lookup, its classes are in jsk-lib/jsk-dl

--- a/configs/blitz/configs/start-blitz-all.config
+++ b/configs/blitz/configs/start-blitz-all.config
@@ -17,7 +17,7 @@ com.sun.jini.start {
             Booter.resolveCodebase(new String[]{
                 "org.sorcersoft.blitz:blitz-common",
                 "org.sorcersoft.blitz:blitz-proxy",
-                "net.jini.lookup:jmx-lookup",
+            	"net.jini:jsk-dl",
                 "org.apache.river:outrigger-dl",
  			    "org.sorcersoft.blitz:blitz-ui"
             }),
@@ -29,7 +29,6 @@ com.sun.jini.start {
             	"org.sorcersoft.blitz:blitz-ui",
             	"org.apache.river:outrigger-dl",
             	"com.sleepycat:je",
-                "net.jini.lookup:jmx-lookup",
             	"net.jini.lookup:serviceui",
             	"net.jini:jsk-lib",
             	"net.jini:jsk-platform"
