--- a/configs/blitz/configs/start-blitz.config
+++ b/configs/blitz/configs/start-blitz.config
@@ -23,7 +23,7 @@ com.sun.jini.start {
             Booter.resolveCodebase(new String[]{
                 "org.sorcersoft.blitz:blitz-common",
                 "org.sorcersoft.blitz:blitz-proxy",
-                "net.jini.lookup:jmx-lookup:2.1",
+            	"net.jini:jsk-dl",
                 "org.apache.river:outrigger-dl",
  			    "org.sorcersoft.blitz:blitz-ui"
             }),
@@ -35,7 +35,6 @@ com.sun.jini.start {
             	"org.sorcersoft.blitz:blitz-ui",
             	"org.apache.river:outrigger-dl",
             	"com.sleepycat:je",
-                "net.jini.lookup:jmx-lookup:2.1",
             	"net.jini.lookup:serviceui",
             	"net.jini:jsk-lib",
             	"net.jini:jsk-platform"
