--- a/pom.xml
+++ b/pom.xml
@@ -35,13 +35,13 @@
         <v_sorcer>${project.version}</v_sorcer>
         <v_sos_release>1.0-M3</v_sos_release>
 		<v.jini>2.2.2</v.jini>
-		<v.blitz>2.2.0</v.blitz>
+		<v.blitz>2.2.1-1</v.blitz>
 		<!--<v.sleepycat>5.0.103</v.sleepycat>-->
 		<v.sleepycat>4.0.92</v.sleepycat>
 		<v.rio>5.0-M4-S5</v.rio>
 		<v.groovy>2.2.1</v.groovy>
 		<v.sigar>1.6.4-2</v.sigar>
-		<v.lockmgr>0.2.sorcer2</v.lockmgr>
+		<v.lockmgr>0.2-3</v.lockmgr>
         <v.slf4j>1.7.5</v.slf4j>
         <v.junit>4.11</v.junit>
         <v.logback>1.0.13</v.logback>
