Reworked proxy publishing - code merged with Michal's pjwstk version. Now Rio correctly redeploys services that are killed. Fixed discovery of registrars in shell. Disabled unnecessary jini services

--- a/sos/sorcer-api/pom.xml
+++ b/sos/sorcer-api/pom.xml
@@ -24,6 +24,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.rioproject</groupId>
+            <artifactId>rio-api</artifactId>
+            <version>${v.rio}</version>
+        </dependency>
+        <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-util</artifactId>
             <version>${project.version}</version>
