--- a/tools/sorcer-provider/src/test/resources/projects/reference/ex0-sui/pom.xml
+++ b/tools/sorcer-provider/src/test/resources/projects/reference/ex0-sui/pom.xml
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>net.jini.lookup</groupId>
             <artifactId>serviceui</artifactId>
-            <version>2.2.2</version>
+            <version>${v.jini}</version>
         </dependency>
 	</dependencies>
 </project>
