Many fixes in invokers and parmodeling, added provisioning via deployment but still problems with starting providers when deployed via deployment

--- a/tests/ju-arithmetic/ju-arithmetic-cfg-all/src/main/resources/arithmetic-prv.config
+++ b/tests/ju-arithmetic/ju-arithmetic-cfg-all/src/main/resources/arithmetic-prv.config
@@ -20,6 +20,7 @@ sorcer.core.provider.ServiceProvider {
 		location = "Sorcersoft.com Lab";
 		publishedInterfaces = new Class[] {
 		    junit.sorcer.core.provider.Arithmetic.class,
+		    junit.sorcer.core.provider.Averager.class,
             junit.sorcer.core.provider.Adder.class,
             junit.sorcer.core.provider.Multiplier.class,
             junit.sorcer.core.provider.Subtractor.class };
