--- a/sos/sos-platform/pom.xml
+++ b/sos/sos-platform/pom.xml
@@ -71,7 +71,7 @@
         <dependency>
             <groupId>org.codehaus.plexus</groupId>
             <artifactId>plexus-utils</artifactId>
-            <version>3.0.15</version>
+            <version>${v.plexus}</version>
         </dependency>
         <!-- -->
         <dependency>
