--- a/tests/par-model/pom.xml
+++ b/tests/par-model/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
-		<artifactId>sos-providers</artifactId>
+		<artifactId>tests</artifactId>
 		<version>1.0-M4-SNAPSHOT</version>
 	</parent>
 
