Changes after merging with 1.0-M4-SNAPSHOT

--- a/tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
+++ b/tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
@@ -16,6 +16,7 @@
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>commons-prv</artifactId>
             <version>${project.version}</version>
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
@@ -26,6 +27,7 @@
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-api</artifactId>
             <version>${project.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
