move sos: protocol handler to separate class loader with dbp-api in codebase

--- a/sos-providers/dbp/pom.xml
+++ b/sos-providers/dbp/pom.xml
@@ -15,5 +15,6 @@
         <module>dbp-api</module>
         <module>dbp-prv</module>
         <module>dbp-cfg</module>
+        <module>dbp-handler</module>
     </modules>
 </project>
