--- a/sos-providers/other-configs/blitz-cfg/pom.xml
+++ b/sos-providers/other-configs/blitz-cfg/pom.xml
@@ -22,20 +22,24 @@
             <groupId>org.rioproject</groupId>
             <artifactId>rio-platform</artifactId>
         	<version>${v.rio}</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.rioproject</groupId>
             <artifactId>rio-api</artifactId>
         	<version>${v.rio}</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sorcer-api</artifactId>
         	<version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sos-platform</artifactId>
+        	<version>${project.version}</version>
+        </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
