--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -200,6 +200,11 @@
             <artifactId>sos-webster</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>dbp-handler</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <!-- For integration test only -->
         <dependency>
@@ -414,6 +419,16 @@
             <groupId>ant-contrib</groupId>
             <artifactId>ant-contrib</artifactId>
             <version>1.0b3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.ant</groupId>
+            <artifactId>ant</artifactId>
+            <version>1.9.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.ant</groupId>
+            <artifactId>ant-launcher</artifactId>
+            <version>1.9.3</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
