--- a/sos-providers/dbp/dbp-handler/pom.xml
+++ b/sos-providers/dbp/dbp-handler/pom.xml
@@ -18,14 +18,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>dbp</artifactId>
         <groupId>org.sorcersoft.sorcer</groupId>
+        <artifactId>dbp</artifactId>
         <version>1.0-M4-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dbp-handler</artifactId>
+    <name>SORCER OS :: providers :: dbp :: Handler</name>
 
     <dependencies>
         <dependency>
