--- a/examples/ex0/ex0-cfg/pom.xml
+++ b/examples/ex0/ex0-cfg/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>ex0-prv</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
