Added account example, removed duplicated ParameterType, fixed reading property files in providers

--- a/sos-providers/exertmonitor/exertmonitor-cfg/src/main/resources/exertmonitor.config
+++ b/sos-providers/exertmonitor/exertmonitor-cfg/src/main/resources/exertmonitor.config
@@ -12,7 +12,7 @@ import java.util.Arrays;
 
 sorcer.core.provider.ServiceProvider {
     // application-specific service provider properties
-	properties = "/config/exertmonitor-prv.properties";
+	properties = "exertmonitor-prv.properties";
 	name = "Exert Monitor";
 	publishedInterfaces = new Class[] { sorcer.core.monitor.MonitoringManagement.class };
 	description = "SORCER Exertion Execution Monitoring service";
