--- a/configs/shell/configs/nsh-start.config
+++ b/configs/shell/configs/nsh-start.config
@@ -30,17 +30,28 @@
 ##          You can omit the @host:port only if your environment points to a running webster URL
 ## codebase http:// - specifies remote jar file using a direct URL
 ##
+# Needed to interpret netlet scripts
+load mvn://org.sorcersoft.sorcer:sos-api
+load mvn://org.sorcersoft.sorcer:dbp-api
+load mvn://org.sorcersoft.sorcer:commons-req
+load mvn://net.jini:jsk-lib
+load mvn://net.jini:jsk-platform
+load mvn://org.sorcersoft.sorcer:sorcer-api
+load mvn://org.sorcersoft.sorcer:sorcer-resolver
+load mvn://org.sorcersoft.sorcer:sos-netlet
+load mvn://org.sorcersoft.sorcer:sos-shell
+load mvn://org.sorcersoft.sorcer:sos-platform
+load mvn://org.sorcersoft.sorcer:sos-webster
+load mvn://org.rioproject:rio-platform
+load mvn://org.rioproject.resolver:resolver-api
+load mvn://org.codehaus.groovy:groovy-all
+load mvn://org.codehaus.plexus:plexus-utils
+load mvn://commons-io.commons-io:commons:2.4
+load mvn://net.jini.lookup:serviceui
 
     # tools.jar for ant tasks
     # load file://${tools.jar}
     # load required libraries
     # codebase mvn://org.sorcersoft.sorcer:ex2-api@192.168.0.10:50001
-
-    # Needed to interpret netlet scripts
-    load mvn://org.sorcersoft.sorcer:sos-api
-    load mvn://org.sorcersoft.sorcer:dbp-api
-    load mvn://org.sorcersoft.sorcer:commons-req
-    #load mvn://org.rioproject:rio-platform
-
     # load user specific libraries
-    #load file://!{user.home}/.nsh/lib/*.jar
+    # load file://!{user.home}/.nsh/lib/*.jar
