--- a/sos-providers/exerter/exerter-prv/pom.xml
+++ b/sos-providers/exerter/exerter-prv/pom.xml
@@ -16,7 +16,12 @@
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>commons-prv</artifactId>
         	<version>${project.version}</version>
-        </dependency>       
+        </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sos-platform</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
