--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -114,6 +114,16 @@
             <artifactId>spacer-cfg</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>concatenator-cfg</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>ju-arithmetic-cfg-all</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <!-- config modules for Jini/Blitz -->
         <dependency>
