--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -517,6 +517,10 @@
             <artifactId>xz</artifactId>
             <version>1.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
